Fixed issue with box-shadows effects not showing up due to unspecified height

--- a/css/oneframework/oneframework.css
+++ b/css/oneframework/oneframework.css
@@ -3179,11 +3179,16 @@ article {
 .boxxy {
   background-color: #fff;
   width: 100%;
-  height: 100%;
+  height: 200px;
   padding: 10px;
-  border-width: 1px;
-  border-style: solid;
-  border-color: #e7e7e7;
+  border: 1px solid #e7e7e7;
+}
+
+.boxxy h5 {
+  text-align: center;
+  position: relative;
+  top: 50%;
+  margin-top: -20px;
 }
 
 .footer-wrap {
