--- a/css/oneframework/scss/_site-layout.scss
+++ b/css/oneframework/scss/_site-layout.scss
@@ -60,9 +60,16 @@ article { margin: ($base-margin * 2) 0 ($base-margin * 8); }
 .boxxy {
 	background-color: $white;
 	width: 100%;
-	height: 100%;
+	height: 200px;
 	padding: $base-padding;
-	@include border(1px, solid, #e7e7e7);
+	border: 1px solid #e7e7e7;
+}
+
+.boxxy h5 {
+	text-align: center;
+	position: relative;
+	top: 50%;
+	margin-top: $base-margin * -2;
 }
 
 .footer-wrap {
